# BE/cmd/api/routers.go
@@ -17,7 +17,14 @@ func (app *application) routes() http.Handler {
 	router.HandlerFunc(http.MethodPost, "/users", app.registerUserHandler)
 
 	router.HandlerFunc(http.MethodPost, "/users/login", app.createAuthenticationJWTTokenHandler)
-	router.HandlerFunc(http.MethodGet, "/users/logout", app.requireAuthenticatedUser(app.logout))
+	router.HandlerFunc(http.MethodGet, "/users/logout", app.requireAuthenticatedUser(app.logoutHandler))
+
+	router.HandlerFunc(http.MethodGet, "/products/:id", app.getProductHandler)
+	router.HandlerFunc(http.MethodGet, "/products", app.listProductHandler)
+
+	router.HandlerFunc(http.MethodGet, "/tags", app.getAllTags)
+
+	router.HandlerFunc(http.MethodGet, "/categories", app.getAllCategories)
 
 	return app.enableCORS(app.authenticate(router))
 
